horizontal scrollbar bug fix Fixing a bug with the .columns--gutter-# classes that was causing a horizontal scrollbar to appear

--- a/assets/sass/02-base/01-tools.scss
+++ b/assets/sass/02-base/01-tools.scss
@@ -6,10 +6,6 @@
 //	used globally for a specific function
 \*================================================*/
 
-//The styling for the central box that holds the whole page content
-.pageWidth { margin:0 auto; max-width:bp('page'); }
-
-
 //remove dot points from a list
 .noDots { list-style: none; margin: 0; padding: 0; }
 
